administrationmanifestfiles/back/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-backend
  labels:
    app: admin-backend
    type: backend
spec:
  selector:
    matchLabels:
      app: admin-backend
      type: backend
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: admin-backend
        type: backend
    spec:
      nodeSelector:
        kubernetes.io/hostname: workernode1
      imagePullSecrets:
        - name: regcred      
      containers:
        - name: admin-backend
          image: 192.168.2.19:5000/administration2:0.0.1-SNAPSHOT
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
          resources:
            requests:
              memory: "512Mi"
              cpu: "300m"
            limits:
              memory: "2Gi"
              cpu: "3"
              #---------------------------------#
          ports:
            - name: api
              containerPort: 1994
              protocol: TCP
          imagePullPolicy: Always
