administrationmanifestfiles/back/service-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-admin
spec:
  selector:
    app: admin-backend
    type: backend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 1994
      targetPort: 1994
      name: http-backend
      #nodePort: 32104
